--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "gsap": "^1.20.3",
         "howler": "^2.0.5",
         "jquery": "^3.2.1",
-        "phaser": "^2.6.2"
+        "phaser-ce": "^2.11.1"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
