--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "gsap": "^1.20.3",
         "howler": "^2.0.5",
         "jquery": "^3.2.1",
+        "phaser": "^3.15.1",
         "phaser-ce": "^2.11.1"
     },
     "scripts": {
