--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,12 @@ $RECYCLE.BIN/
 
 # OSX
 # =========================
-
 .AppleDouble
 .LSOverride
-*.DS_Store
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
 
 # Thumbnails
 ._*
