--- a/package.json
+++ b/package.json
@@ -9,33 +9,28 @@
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.0",
-        "babel-preset-es2015": "^6.24.1",
-        "clean-webpack-plugin": "^0.1.16",
         "copy-webpack-plugin": "^4.0.1",
         "css-loader": "^0.28.7",
         "extract-text-webpack-plugin": "^3.0.0",
         "html-loader": "^0.5.1",
-        "url-loader": "^0.6.2",
         "html-webpack-plugin": "^2.30.1",
         "htmllint-loader": "^1.3.8",
         "node-sass": "^4.5.3",
         "optimize-css-assets-webpack-plugin": "^3.1.1",
         "sass-loader": "^6.0.6",
+        "uglifyjs-webpack-plugin": "^1.0.0",
+        "url-loader": "^0.6.2",
         "webpack": "^3.5.6",
         "webpack-dev-server": "^2.7.1",
         "webpack-merge": "^4.1.1"
     },
     "dependencies": {
-        "animate.css": "^3.5.2",
         "gsap": "^1.20.3",
-        "howler": "^2.0.5",
-        "jquery": "^3.2.1",
-        "phaser": "^3.15.1",
-        "phaser-ce": "^2.11.1"
+        "phaser": "^3.15.1"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --open --progress --config webpack.dev.js",
+        "start": "webpack-dev-server --progress --config webpack.dev.js",
         "build": "webpack --config webpack.prod.js"
     }
 }
